# RoArm-M2-Touchscreen-Controller

./: .gitignore  CMakeLists.txt  README.md  firmware_build.sh  partitions.csv  sdkconfig  sdkconfig.defaults
components/lvgl__lvgl/src/: lv_conf_internal.h
components/lvgl__lvgl/src/font/: lv_font.h  lv_font.mk  lv_font_dejavu_32_persian_hebrew.c
main/: CMakeLists.txt  main.c  robot_arm_comm.c  robot_arm_comm.h  screens.c  screens.h  ui.c  ui.h  ui_robot_interface.c  ui_robot_interface.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h  wifi_manager.c  wifi_manager.h
